# neau-data-hub

./: .dockerignore  .env.example  .gitignore  README copy.md  README.md  deploy.sh  docker-compose.pg.yml  灌区水土资源多智能体集群智能调控系统能力报告.md
.github/workflows/: playwright.yml
CanalSim/: Makefile  SPEC.md  err.txt
CanalSim/configs/: example_input.json
CanalSim/include/: Branch.h  Channel.h  Output.h
CanalSim/python/: canalsim_client.py  plot_result.py
CanalSim/src/: Channel.cpp  ConfigIO.cpp  Output.cpp  Solver.cpp  main.cpp
docs/: canal_model_api.md
docs/plans/: 2026-06-08-001-feat-data-asset-management-plan.md
ruoyi-fastapi-backend/: .dockerignore  .env.dev  .env.prod  Dockerfile.pg  query_canals.py  requirements-heavy.txt  requirements-pg.txt  requirements.txt  server.py
ruoyi-fastapi-backend/CanalSim_src/: CMakeLists.txt  Makefile
ruoyi-fastapi-backend/CanalSim_src/include/: Channel.h  ConfigIO.h  Solver.h
ruoyi-fastapi-backend/CanalSim_src/src/: Channel.cpp  main.cpp
ruoyi-fastapi-backend/alembic/: env.py
ruoyi-fastapi-backend/common/: constant.py
ruoyi-fastapi-backend/config/: database.py  env.py  get_scheduler.py
ruoyi-fastapi-backend/docs/: data_asset_management.md  irrigation_api.md  (+1 more)
ruoyi-fastapi-frontend/: .dockerignore  .env.development  .env.docker  .env.production  .env.staging  .gitignore  Dockerfile  package-lock.json  package.json  vite.config.js
ruoyi-fastapi-test/: docker-compose.test.pg.yml
scripts/: apply_irrigation_zone_sql.py  datahub_database.sql  import_data.py  menu_insert.sql
tmp/: agri_irrigation_zone_export.csv
(+245 files in other folders)
